--- a/infrastructure/base/kustomization.yaml
+++ b/infrastructure/base/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   # - ./sources
   # - ./cert-manager
-  - ./prometheus
+  # - ./prometheus
   # - ./vault-infra
   # - ./nginx-ingress-k8s
